bindings/rust/idax-sys/shim/idax_shim.h

/** Free a malloc'd string returned by an idax function. */
void idax_free_string(char* s);
/* ═══════════════════════════════════════════════════════════════════════════
 * Architecture-independent exception regions (ida::exception)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef struct IdaxExceptionRange {
    uint64_t start;
    uint64_t end;
} IdaxExceptionRange;
typedef struct IdaxExceptionHandlerMetadata {
    IdaxExceptionRange* regions;
    size_t regions_count;
    int has_stack_displacement;
    int64_t stack_displacement;
    int has_frame_register;
    int frame_register;
} IdaxExceptionHandlerMetadata;
/** selector_kind: 0=typed, 1=catch-all, 2=cleanup. */
typedef struct IdaxExceptionCatchHandler {
    IdaxExceptionHandlerMetadata metadata;
    int has_object_displacement;
    int64_t object_displacement;
    int selector_kind;
    int64_t type_identifier;
} IdaxExceptionCatchHandler;
/** disposition is -1=continue execution, 0=continue search, 1=execute handler. */
typedef struct IdaxExceptionSehHandler {
    IdaxExceptionHandlerMetadata metadata;
    IdaxExceptionRange* filter_regions;
    size_t filter_regions_count;
    int has_disposition;
    int disposition;
} IdaxExceptionSehHandler;
/** handler_kind: 0=C++, 1=SEH. */
typedef struct IdaxExceptionBlockDefinition {
    IdaxExceptionRange* protected_regions;
    size_t protected_regions_count;
    int handler_kind;
    IdaxExceptionCatchHandler* catches;
    size_t catches_count;
    IdaxExceptionSehHandler seh;
} IdaxExceptionBlockDefinition;
typedef struct IdaxExceptionBlock {
    IdaxExceptionBlockDefinition definition;
    uint8_t nesting_level;
} IdaxExceptionBlock;
int idax_exception_list(uint64_t start, uint64_t end,
                        IdaxExceptionBlock** out, size_t* count);
void idax_exception_blocks_free(IdaxExceptionBlock* blocks, size_t count);
int idax_exception_remove(uint64_t start, uint64_t end);
int idax_exception_add(const IdaxExceptionBlockDefinition* definition);
int idax_exception_system_region_start(uint64_t address,
                                       uint64_t* out, int* has_value);
/** locations is the private shim transport for a safe semantic Rust set. */
int idax_exception_contains(uint64_t address, uint32_t locations, int* out);
/* ═══════════════════════════════════════════════════════════════════════════
 * Address (ida::address)
 * ═══════════════════════════════════════════════════════════════════════════ */

/* Predicates — return 1=true, 0=false */
int idax_address_is_mapped(uint64_t ea);
int idax_address_is_loaded(uint64_t ea);
int idax_address_is_code(uint64_t ea);
int idax_address_is_data(uint64_t ea);
int idax_address_is_unknown(uint64_t ea);
int idax_address_is_head(uint64_t ea);
int idax_address_is_tail(uint64_t ea);
/* Navigation */
int idax_address_item_start(uint64_t ea, uint64_t* out);
int idax_address_item_end(uint64_t ea, uint64_t* out);
int idax_address_item_size(uint64_t ea, uint64_t* out);
int idax_address_next_head(uint64_t ea, uint64_t limit, uint64_t* out);
int idax_address_prev_head(uint64_t ea, uint64_t limit, uint64_t* out);
int idax_address_next_not_tail(uint64_t ea, uint64_t* out);
int idax_address_prev_not_tail(uint64_t ea, uint64_t* out);
int idax_address_next_mapped(uint64_t ea, uint64_t* out);
int idax_address_prev_mapped(uint64_t ea, uint64_t* out);
int idax_address_find_first(uint64_t start, uint64_t end, int predicate,
                            uint64_t* out);
int idax_address_find_next(uint64_t ea, int predicate, uint64_t end,
                           uint64_t* out);
/* ═══════════════════════════════════════════════════════════════════════════
 * Segment (ida::segment)
 * ═══════════════════════════════════════════════════════════════════════════ */

/** Flat C representation of a segment snapshot. */
typedef struct IdaxSegment {
    uint64_t start;
    uint64_t end;
    int      bitness;
    int      type;         /**< ida::segment::Type enum as int */
    int      perm_read;
    int      perm_write;
    int      perm_exec;
    char*    name;         /**< malloc'd, free with idax_free_string */
    char*    class_name;   /**< malloc'd, free with idax_free_string */
    int      visible;
} IdaxSegment;
/** Owned semantic segment-register descriptor. */
typedef struct IdaxSegmentRegisterDescriptor {
    char* name;
    size_t bit_width;
    int is_code;
    int is_data;
} IdaxSegmentRegisterDescriptor;