bindings/rust/idax-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxExceptionCatchHandler"]
        [::std::mem::size_of::<IdaxExceptionCatchHandler>() - 72usize];
    ["Alignment of IdaxExceptionCatchHandler"]
        [::std::mem::align_of::<IdaxExceptionCatchHandler>() - 8usize];
    ["Offset of field: IdaxExceptionCatchHandler::metadata"]
        [::std::mem::offset_of!(IdaxExceptionCatchHandler, metadata) - 0usize];
    ["Offset of field: IdaxExceptionCatchHandler::has_object_displacement"]
        [::std::mem::offset_of!(IdaxExceptionCatchHandler, has_object_displacement) - 40usize];
    ["Offset of field: IdaxExceptionCatchHandler::object_displacement"]
        [::std::mem::offset_of!(IdaxExceptionCatchHandler, object_displacement) - 48usize];
    ["Offset of field: IdaxExceptionCatchHandler::selector_kind"]
        [::std::mem::offset_of!(IdaxExceptionCatchHandler, selector_kind) - 56usize];
    ["Offset of field: IdaxExceptionCatchHandler::type_identifier"]
        [::std::mem::offset_of!(IdaxExceptionCatchHandler, type_identifier) - 64usize];
};
impl Default for IdaxExceptionCatchHandler {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " disposition is -1=continue execution, 0=continue search, 1=execute handler."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxExceptionSehHandler {
    pub metadata: IdaxExceptionHandlerMetadata,
    pub filter_regions: *mut IdaxExceptionRange,
    pub filter_regions_count: usize,
    pub has_disposition: ::std::os::raw::c_int,
    pub disposition: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxExceptionSehHandler"][::std::mem::size_of::<IdaxExceptionSehHandler>() - 64usize];
    ["Alignment of IdaxExceptionSehHandler"]
        [::std::mem::align_of::<IdaxExceptionSehHandler>() - 8usize];
    ["Offset of field: IdaxExceptionSehHandler::metadata"]
        [::std::mem::offset_of!(IdaxExceptionSehHandler, metadata) - 0usize];
    ["Offset of field: IdaxExceptionSehHandler::filter_regions"]
        [::std::mem::offset_of!(IdaxExceptionSehHandler, filter_regions) - 40usize];
    ["Offset of field: IdaxExceptionSehHandler::filter_regions_count"]
        [::std::mem::offset_of!(IdaxExceptionSehHandler, filter_regions_count) - 48usize];
    ["Offset of field: IdaxExceptionSehHandler::has_disposition"]
        [::std::mem::offset_of!(IdaxExceptionSehHandler, has_disposition) - 56usize];
    ["Offset of field: IdaxExceptionSehHandler::disposition"]
        [::std::mem::offset_of!(IdaxExceptionSehHandler, disposition) - 60usize];
};
impl Default for IdaxExceptionSehHandler {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " handler_kind: 0=C++, 1=SEH."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxExceptionBlockDefinition {
    pub protected_regions: *mut IdaxExceptionRange,
    pub protected_regions_count: usize,
    pub handler_kind: ::std::os::raw::c_int,
    pub catches: *mut IdaxExceptionCatchHandler,
    pub catches_count: usize,
    pub seh: IdaxExceptionSehHandler,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxExceptionBlockDefinition"]
        [::std::mem::size_of::<IdaxExceptionBlockDefinition>() - 104usize];
    ["Alignment of IdaxExceptionBlockDefinition"]
        [::std::mem::align_of::<IdaxExceptionBlockDefinition>() - 8usize];
    ["Offset of field: IdaxExceptionBlockDefinition::protected_regions"]
        [::std::mem::offset_of!(IdaxExceptionBlockDefinition, protected_regions) - 0usize];
    ["Offset of field: IdaxExceptionBlockDefinition::protected_regions_count"]
        [::std::mem::offset_of!(IdaxExceptionBlockDefinition, protected_regions_count) - 8usize];
    ["Offset of field: IdaxExceptionBlockDefinition::handler_kind"]
        [::std::mem::offset_of!(IdaxExceptionBlockDefinition, handler_kind) - 16usize];
    ["Offset of field: IdaxExceptionBlockDefinition::catches"]
        [::std::mem::offset_of!(IdaxExceptionBlockDefinition, catches) - 24usize];
    ["Offset of field: IdaxExceptionBlockDefinition::catches_count"]
        [::std::mem::offset_of!(IdaxExceptionBlockDefinition, catches_count) - 32usize];
    ["Offset of field: IdaxExceptionBlockDefinition::seh"]
        [::std::mem::offset_of!(IdaxExceptionBlockDefinition, seh) - 40usize];
};
impl Default for IdaxExceptionBlockDefinition {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxExceptionBlock {
    pub definition: IdaxExceptionBlockDefinition,
    pub nesting_level: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxExceptionBlock"][::std::mem::size_of::<IdaxExceptionBlock>() - 112usize];
    ["Alignment of IdaxExceptionBlock"][::std::mem::align_of::<IdaxExceptionBlock>() - 8usize];
    ["Offset of field: IdaxExceptionBlock::definition"]
        [::std::mem::offset_of!(IdaxExceptionBlock, definition) - 0usize];
    ["Offset of field: IdaxExceptionBlock::nesting_level"]
        [::std::mem::offset_of!(IdaxExceptionBlock, nesting_level) - 104usize];
};
impl Default for IdaxExceptionBlock {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn idax_exception_list(
        start: u64,
        end: u64,
        out: *mut *mut IdaxExceptionBlock,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_exception_blocks_free(blocks: *mut IdaxExceptionBlock, count: usize);
}
unsafe extern "C" {
    pub fn idax_exception_remove(start: u64, end: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_exception_add(
        definition: *const IdaxExceptionBlockDefinition,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_exception_system_region_start(
        address: u64,
        out: *mut u64,
        has_value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " locations is the private shim transport for a safe semantic Rust set."]
    pub fn idax_exception_contains(
        address: u64,
        locations: u32,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_is_mapped(ea: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_is_loaded(ea: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_is_code(ea: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_is_data(ea: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_is_unknown(ea: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_is_head(ea: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_is_tail(ea: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_item_start(ea: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_item_end(ea: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_item_size(ea: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_next_head(ea: u64, limit: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_prev_head(ea: u64, limit: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_next_not_tail(ea: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_prev_not_tail(ea: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_next_mapped(ea: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_prev_mapped(ea: u64, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_find_first(
        start: u64,
        end: u64,
        predicate: ::std::os::raw::c_int,
        out: *mut u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_address_find_next(
        ea: u64,
        predicate: ::std::os::raw::c_int,
        end: u64,
        out: *mut u64,
    ) -> ::std::os::raw::c_int;
}
#[doc = " Flat C representation of a segment snapshot."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxSegment {
    pub start: u64,
    pub end: u64,
    pub bitness: ::std::os::raw::c_int,
    #[doc = "< ida::segment::Type enum as int"]
    pub type_: ::std::os::raw::c_int,
    pub perm_read: ::std::os::raw::c_int,
    pub perm_write: ::std::os::raw::c_int,
    pub perm_exec: ::std::os::raw::c_int,
    #[doc = "< malloc'd, free with idax_free_string"]
    pub name: *mut ::std::os::raw::c_char,
    #[doc = "< malloc'd, free with idax_free_string"]
    pub class_name: *mut ::std::os::raw::c_char,
    pub visible: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxSegment"][::std::mem::size_of::<IdaxSegment>() - 64usize];
    ["Alignment of IdaxSegment"][::std::mem::align_of::<IdaxSegment>() - 8usize];
    ["Offset of field: IdaxSegment::start"][::std::mem::offset_of!(IdaxSegment, start) - 0usize];
    ["Offset of field: IdaxSegment::end"][::std::mem::offset_of!(IdaxSegment, end) - 8usize];
    ["Offset of field: IdaxSegment::bitness"]
        [::std::mem::offset_of!(IdaxSegment, bitness) - 16usize];
    ["Offset of field: IdaxSegment::type_"][::std::mem::offset_of!(IdaxSegment, type_) - 20usize];
    ["Offset of field: IdaxSegment::perm_read"]
        [::std::mem::offset_of!(IdaxSegment, perm_read) - 24usize];
    ["Offset of field: IdaxSegment::perm_write"]
        [::std::mem::offset_of!(IdaxSegment, perm_write) - 28usize];
    ["Offset of field: IdaxSegment::perm_exec"]
        [::std::mem::offset_of!(IdaxSegment, perm_exec) - 32usize];
    ["Offset of field: IdaxSegment::name"][::std::mem::offset_of!(IdaxSegment, name) - 40usize];
    ["Offset of field: IdaxSegment::class_name"]
        [::std::mem::offset_of!(IdaxSegment, class_name) - 48usize];
    ["Offset of field: IdaxSegment::visible"]
        [::std::mem::offset_of!(IdaxSegment, visible) - 56usize];
};
impl Default for IdaxSegment {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " Owned semantic segment-register descriptor."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxSegmentRegisterDescriptor {
    pub name: *mut ::std::os::raw::c_char,
    pub bit_width: usize,
    pub is_code: ::std::os::raw::c_int,
    pub is_data: ::std::os::raw::c_int,
}
